@@ -372,7 +372,7 @@ table.budget.act_trans td.date				{width:110px; padding-right:0px;}
 .wrap_result .sector_list_wrap				{color:#ccc; padding:0 0 10px 0;}
 .wrap_result .header.glossary				{margin-bottom:10px;}
 .wrap_result table.budget td				{vertical-align:middle; padding:5px 0;}
-.wrap_result table.budget tr.row_measure td	{color:#ccc; font-size:11px; text-transform:uppercase; padding:5px 0;}
+.wrap_result table.budget tr.row_measure td	{color:#ccc; font-size:11px; padding:5px 0;}
 .result_facet								{padding-bottom:5px; font-size:11px; line-height:16px; color:#ccc;}
 .result_facet:first-of-type					{padding-bottom:0;}
 .result_facet_name							{font-size:13px; color:#fff;}
