@@ -1,6 +1,7 @@
 Development Portal (2020-03-05 shi)
 ==============================
 Display @measure and date bars in results
+Update background colour for charts
 
 
 Development Portal (2020-02-29 shi)
